--- a/.travis.yaml
+++ b/.travis.yaml
@@ -5,7 +5,7 @@ services:
 env:
   global:
     - SHA=$(git rev-parse HEAD )
-    - CLOUD_CORE_DISABLE_PROMPTS=1
+    - CLOUDSDK_CORE_DISABLE_PROMPTS=1
 before_install:
   - openssl aes-256-cbc -K $encrypted_e82a473f8c22_key -iv $encrypted_e82a473f8c22_iv -in service-account.json.enc -out service-account.json -d
   - curl https://sdk.cloud.google.com | bash > /dev/null
@@ -19,7 +19,7 @@ before_install:
   - docker build -t net9876/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run net9876/react-test npm test -- --coverage
+  - docker run stephengrider/react-test npm test -- --coverage
 
 deploy:
   provider: script
